--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,249 @@
-/*! by Abel Elizalde */.float-left,.r>*{float:left}html{font-family:Helvetica Neue,Helvetica,Arial,sans-serif;line-height:1.5rem;margin:0;box-sizing:border-box}*,::after,::before{box-sizing:inherit}body{margin:0;color:#404040;background:#fff;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased}blockquote,figure,h1,h2,h3,h4,ol,p,ul{margin:0;padding:0}li,main{display:block}h1,h2,h3,h4{font-size:inherit}strong{font-weight:700}a{transition:0;text-decoration:none}a:hover{text-decoration:underline}button{overflow:visible;border:0;font:inherit;-webkit-font-smoothing:inherit;letter-spacing:inherit}::-moz-focus-inner{padding:0;border:0}:focus{outline:0}.r::after,.r::before{display:block;content:' ';clear:both}.flex-row,.vb,.vc,.vs,.vt{display:flex}.flex-row{flex-direction:row;flex-wrap:wrap}.flex-column{flex:1}.flex-large,.flex-small{flex-basis:100%}.cl0,.cl10,.cl100,.cl16,.cl20,.cl25,.cl30,.cl33,.cl40,.cl50,.cl60,.cl66,.cl70,.cl75,.cl80,.cl90,.cs0,.cs10,.cs100,.cs16,.cs20,.cs25,.cs30,.cs33,.cs40,.cs50,.cs60,.cs66,.cs70,.cs75,.cs80,.cs90{width:100%}.c0{width:0}.c10{width:10%}.c20{width:20%}.c30{width:30%}.c40{width:40%}.c50{width:50%}.c60{width:60%}.c70{width:70%}.c80{width:80%}.c90{width:90%}.c100{width:100%}.c25{width:25%}.c16{width:16.6667%}.c33{width:33.3333%}.c66{width:66.6667%}.c75{width:75%}html{font-size:120%}@media (min-width:600px){.cs0{width:0}.pcs0{margin-left:0}.cs10{width:10%}.pcs10{margin-left:10%}.cs20{width:20%}.pcs20{margin-left:20%}.cs30{width:30%}.pcs30{margin-left:30%}.cs40{width:40%}.pcs40{margin-left:40%}.cs50{width:50%}.pcs50{margin-left:50%}.cs60{width:60%}.pcs60{margin-left:60%}.cs70{width:70%}.pcs70{margin-left:70%}.cs80{width:80%}.pcs80{margin-left:80%}.cs90{width:90%}.pcs90{margin-left:90%}.cs100{width:100%}.pcs100{margin-left:100%}.cs25{width:25%}.pcs25{margin-left:25%}.cs16{width:16.6667%}.pcs16{margin-left:16.6667%}.cs33{width:33.3333%}.pcs33{margin-left:33.3333%}.cs66{width:66.6667%}.pcs66{margin-left:66.6667%}.cs75{width:75%}.pcs75{margin-left:75%}.flex-small{flex:1}html{font-size:110%}}@media (min-width:900px){.cl0{width:0}.pcl0{margin-left:0}.cl10{width:10%}.pcl10{margin-left:10%}.cl20{width:20%}.pcl20{margin-left:20%}.cl30{width:30%}.pcl30{margin-left:30%}.cl40{width:40%}.pcl40{margin-left:40%}.cl50{width:50%}.pcl50{margin-left:50%}.cl60{width:60%}.pcl60{margin-left:60%}.cl70{width:70%}.pcl70{margin-left:70%}.cl80{width:80%}.pcl80{margin-left:80%}.cl90{width:90%}.pcl90{margin-left:90%}.cl100{width:100%}.pcl100{margin-left:100%}.cl25{width:25%}.pcl25{margin-left:25%}.cl16{width:16.6667%}.pcl16{margin-left:16.6667%}.cl33{width:33.3333%}.pcl33{margin-left:33.3333%}.cl66{width:66.6667%}.pcl66{margin-left:66.6667%}.cl75{width:75%}.pcl75{margin-left:75%}.flex-large{flex:1}html{font-size:100%}}.button,a.button,button{background:#00549F;color:#fff;cursor:pointer;transition:0}.button:active,.button:focus,.button:hover,a.button:active,a.button:focus,a.button:hover,button:active,button:focus,button:hover{background:#004786;color:#fff;font-size:1rem}.b{background:#fff}.bp{background:#00549F}.bs{background:#68953B}.bd{background:#e6e6e6}.t{color:#404040}.tp{color:#00549F}.ts{color:#68953B}.td{color:#272727}.twhite{color:#fff}.m{margin:1.5rem}.m0{margin:0}.md{margin:3rem}.mh{margin:.75rem}.mq{margin:.375rem}.mv{margin-top:1.5rem;margin-bottom:1.5rem}.mvd{margin-top:3rem;margin-bottom:3rem}.mvh{margin-top:.75rem;margin-bottom:.75rem}.mvq{margin-top:.375rem;margin-bottom:.375rem}.mh{margin-left:1.5rem;margin-right:1.5rem}.mhd{margin-left:3rem;margin-right:3rem}.mhh{margin-left:.75rem;margin-right:.75rem}.mhq{margin-left:.375rem;margin-right:.375rem}.p{padding:1.5rem}.p0{padding:0}.pd{padding:3rem}.ph{padding:.75rem}.pq{padding:.375rem}.pv{padding-top:1.5rem;padding-bottom:1.5rem}.pvd{padding-top:3rem;padding-bottom:3rem}.pvh{padding-top:.75rem;padding-bottom:.75rem}.pvq{padding-top:.375rem;padding-bottom:.375rem}.ph{padding-left:1.5rem;padding-right:1.5rem}.phd{padding-left:3rem;padding-right:3rem}.phh{padding-left:.75rem;padding-right:.75rem}.phq{padding-left:.375rem;padding-right:.375rem}.tc{text-align:center}.tl{text-align:left}.tr{text-align:right}.vc{align-items:center;justify-content:center}.vb{align-items:flex-end;justify-content:center}.vt{align-items:flex-start;justify-content:center}.vs{align-items:stretch;justify-content:center}.float-right{float:right}.fixed{position:fixed}.link{cursor:pointer}.show{display:block!important}.hide{display:none!important}.invisible{visibility:hidden}.image-responsive{max-width:100%}
+/*! by Abel Elizalde */
+@font-face {
+  font-family: 'newsgoth';
+  src: url("../../css/fonts/newsgotlb.woff2"); }
+
+@font-face {
+  font-family: 'exo';
+  src: url("../../css/fonts/exo.woff2"); }
+
+html {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+body {
+  margin: 0;
+  color: #555659;
+  background: #ffffff;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased; }
+
+h1,
+h2,
+h3,
+h4,
+p,
+blockquote,
+figure,
+ol,
+ul {
+  margin: 0;
+  padding: 0; }
+
+main,
+li {
+  display: block; }
+
+h1,
+h2,
+h3,
+h4 {
+  font-size: inherit; }
+
+strong {
+  font-weight: bold; }
+
+a {
+  transition: 0.15s;
+  text-decoration: none;
+  cursor: pointer; }
+
+button {
+  overflow: visible;
+  border: 0;
+  font: inherit;
+  -webkit-font-smoothing: inherit;
+  letter-spacing: inherit;
+  background: none;
+  cursor: pointer; }
+
+::-moz-focus-inner {
+  padding: 0;
+  border: 0; }
+
+:focus {
+  outline: 0; }
+
+.row {
+  display: flex; }
+
+.row > * {
+  flex: 1;
+  flex-grow: 4; }
+  .row > *.row-sm {
+    flex-grow: 2; }
+  .row > *.row-lg {
+    flex-grow: 8; }
+
+.wrapper {
+  margin: 0 auto;
+  max-width: 20rem;
+  padding: 1.5rem 1.5rem; }
+
+.wrapper-sm {
+  margin: 0 auto;
+  max-width: 48rem;
+  padding: 3rem 3rem; }
+
+.wrapper-lg {
+  margin: 0 auto;
+  max-width: 75rem;
+  padding: 4.5rem 4.5rem; }
+
+@media (min-width: 48rem) {
+  .row-sm {
+    display: block; } }
+
+@media (min-width: 75rem) {
+  .row-lg {
+    display: block; } }
+
+html {
+  font-size: 1rem; }
+
+.text-big {
+  font-size: 1rem; }
+  .text-big:hover {
+    font-size: 1.05rem; }
+
+@media (min-width: 48rem) {
+  html {
+    font-size: 1.1rem; }
+  .text-big {
+    font-size: 1.1rem; }
+    .text-big:hover {
+      font-size: 1.15rem; } }
+
+@media (min-width: 75rem) {
+  html {
+    font-size: 1.2rem; }
+  .text-big {
+    font-size: 1.2rem; }
+    .text-big:hover {
+      font-size: 1.25rem; } }
+
+a.button, .button, button {
+  background: #00549F;
+  color: white;
+  cursor: pointer;
+  transition: 0.15s; }
+
+a.button:hover, .button:hover, button:hover, a.button:focus, a.button:active, .button:focus, .button:active, button:focus, button:active {
+  background: #004786;
+  color: white;
+  font-size: 1rem; }
+
+.back {
+  background: #ffffff; }
+
+.back-primary {
+  background: #00549F; }
+
+.back-secondary {
+  background: #68953B; }
+
+.back-dark {
+  background: #e6e6e6; }
+
+.text-primary {
+  color: #00549F; }
+
+.text-secondary {
+  color: #68953B; }
+
+.text-dark {
+  color: #3c3d3f; }
+
+.text-white {
+  color: white; }
+
+.text-blue {
+  color: #00549F; }
+
+.text-green {
+  color: #68953B; }
+
+.text-red {
+  color: #BC112E; }
+
+.text-yellow {
+  color: #DB9635; }
+
+.push {
+  margin-right: 1.5rem; }
+
+.push-bot {
+  margin-bottom: 1.5rem; }
+
+.island {
+  padding: 1.5rem; }
+
+.island-double {
+  padding: 3rem; }
+
+.gutter {
+  margin-right: 1.5rem;
+  margin-left: 1.5rem; }
+
+.text-center {
+  text-align: center; }
+
+.text-left {
+  text-align: left; }
+
+.text-right {
+  text-align: right; }
+
+.text-justify {
+  text-align: justify; }
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+
+.horizontal-center {
+  display: flex;
+  justify-content: center; }
+
+.vertical-center {
+  display: flex;
+  align-items: center; }
+
+.vertical-bottom {
+  display: flex;
+  align-items: flex-end; }
+
+.vertical-top {
+  display: flex;
+  align-items: flex-start; }
+
+.link {
+  cursor: pointer; }
+
+.hide {
+  display: none; }
+
+.show {
+  display: inherit; }
+
+@media (min-width: 48rem) {
+  .hide-sm {
+    display: none; }
+  .show-sm {
+    display: inherit; } }
+
+@media (min-width: 75rem) {
+  .hide-lg {
+    display: none; }
+  .show-lg {
+    display: inherit; } }
