--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -1,32 +1,30 @@
-@font-face{
+@font-face {
     font-family: 'newsgoth';
     src: url('../../css/fonts/newsgotlb.woff2');
 }
 
-@font-face{
+@font-face {
     font-family: 'exo';
     src: url('../../css/fonts/exo.woff2');
 }
 
-$grid: 0, 10,20,30,40,50,60,70,80,90,100,25,16.6667,33.3333,66.6667,75;
-$flex-order: 0,1,2,3,4,5,6,7,8,9,10;
 $buttons: ('a.button, .button, button');
 $transition: .15s;
-
-$tablet: 768px;
-$desktop: 900px;
-
+$phone: 20rem;
+$tablet: 48rem;
+$desktop: 75rem;
 $font-size: 1rem;
 $space: 1.5rem;
 $border: 2px;
-
 $background: #ffffff;
 $alternate-background: #d5d5d5;
 $primary-color: #00549F;
 $secondary-color: #68953B;
 $font-color: #555659;
-$font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-
+$font-family: Helvetica Neue,
+Helvetica,
+Arial,
+sans-serif;
 $blue:#00549F;
 $skyBlue:#4a7bab;
 $green:#68953B;
@@ -34,17 +32,11 @@ $red:#BC112E;
 $yellow:#DB9635;
 $orange:#eb3c00;
 $blueHover:#013360;
-
-
-
 // $border-width: 1px;
 // $border-style: solid;
 // $border-color: #cdcdcd;
 // $border-radius: 4px;
 // $borders: $border-width $border-style $border-color;
-
-
-
 // $button-background: $primary;
 // $button-background-hover: darken($button-background, 10%);
 // $button-color: #ffffff;
@@ -56,12 +48,10 @@ $blueHover:#013360;
 // $button-border-color: $button-background;
 // $button-border-radius: $border-radius;
 // $button-text-transform: uppercase;
-
 // // Accent buttons
 // $accent-button-background: $secondary;
 // $accent-button-color: #ffffff;
 // $accent-button-color-hover: #ffffff;
-
 // // Muted Buttons
 // $muted-border: 1px solid $accent;
 // $muted-border-hover: 1px solid darken($accent, 30%);
@@ -69,10 +59,8 @@ $blueHover:#013360;
 // $muted-background-hover: transparent;
 // $muted-color: darken($accent-color, 50%);
 // $muted-color-hover: darken($accent-color, 50%);
-
 // // Round Buttons
 // $round-buttons: 40px;
-
 // $forms: ('[type=color], [type=date], [type=datetime], [type=datetime-local], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=url], [type=week], [type=time], select, textarea');
 // $buttons: ('.button, a.button, button, [type=submit], [type=reset], [type=button]');
 // $input-background: #ffffff;
@@ -80,10 +68,8 @@ $blueHover:#013360;
 // $form-border: 1px solid #cdcdcd;
 // $form-border-hover: 1px solid darken(#cdcdcd, 10%);
 // $form-border-focus: 1px solid #898989;
-
 // $stripes: #f0f0f0;
 // $caption: darken($accent-color, 20%);
-
 // $code-color: $font-color;
 // $code-family: Menlo, monospace;
 // $code-background: #f4f4f4;
