--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -23,14 +23,15 @@ $alternate-background: #d5d5d5;
 $primary-color: #00549F;
 $secondary-color: #68953B;
 $font-color: #555659;
+$a-color: #9A999E;
 // c
-$blue:#00549F;
-$skyBlue:#4a7bab;
-$green:#68953B;
-$red:#BC112E;
-$yellow:#DB9635;
-$orange:#eb3c00;
-$blueHover:#013360;
+$blue: lighten(#00549F, 10%);
+$skyBlue: lighten(#4a7bab, 10%);
+$green: lighten(#68953B, 10%);
+$red: lighten(#BC112E, 10%);
+$yellow: lighten(#DB9635, 10%);
+$orange: lighten(#eb3c00, 10%);
+$blueHover: lighten(#013360, 10%);
 // $border-width: 1px;
 // $border-style: solid;
 // $border-color: #cdcdcd;
