--- a/components/_type.scss
+++ b/components/_type.scss
@@ -18,7 +18,7 @@ html {
 
 @include tablet {
   html {
-    font-size: $font-size * 1.1;
+    // font-size: $font-size * 1.1;
   }
   .text-big {
     font-size: $font-size * 1.1;
@@ -30,7 +30,7 @@ html {
 
 @include desktop {
   html {
-    font-size: $font-size * 1.2;
+    // font-size: $font-size * 1.1;
   }
   .text-big {
     font-size: $font-size * 1.2;
